# ollama-cli-python

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.ollama/: context.md
ollama_cli/: client.py  command_extractor.py  config.py  history.py  main.py  vector_store.py
